businessprocess/grammarparser/ProcessParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Process.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class ProcessParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		INCLUDE=1, PROPERTIES=2, START=3, END=4, INIT=5, WORD=6, COMMAND=7, GAMECOMMANDS=8, 
		CONDITIONCOMMAND=9, IF=10, THEN=11, ELSE=12, WHITESPACE=13, NEWLINE=14;
	public const int
		RULE_process = 0, RULE_initProcess = 1, RULE_objectWithProperty = 2, RULE_objectProperties = 3, 
		RULE_property = 4, RULE_chainOfCommands = 5, RULE_simplecommand = 6, RULE_conditioncommand = 7;
	public static readonly string[] ruleNames = {
		"process", "initProcess", "objectWithProperty", "objectProperties", "property", 
		"chainOfCommands", "simplecommand", "conditioncommand"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Include'", "'Properties'", "'Start'", "'End'", "'Init'", null, 
		"'Command'", null, "'ConditionCommand'", "'If'", "'Then'", "'Else'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "INCLUDE", "PROPERTIES", "START", "END", "INIT", "WORD", "COMMAND", 
		"GAMECOMMANDS", "CONDITIONCOMMAND", "IF", "THEN", "ELSE", "WHITESPACE", 
		"NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Process.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ProcessParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ProcessParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ProcessParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProcessContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode START() { return GetToken(ProcessParser.START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public InitProcessContext initProcess() {
			return GetRuleContext<InitProcessContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(ProcessParser.END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ProcessParser.Eof, 0); }
		public ProcessContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_process; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.EnterProcess(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.ExitProcess(this);
		}
	}

	[RuleVersion(0)]
	public ProcessContext process() {
		ProcessContext _localctx = new ProcessContext(Context, State);
		EnterRule(_localctx, 0, RULE_process);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 16;
			Match(START);
			State = 17;
			initProcess();
			State = 18;
			Match(END);
			State = 19;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InitProcessContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INIT() { return GetToken(ProcessParser.INIT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ObjectWithPropertyContext[] objectWithProperty() {
			return GetRuleContexts<ObjectWithPropertyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectWithPropertyContext objectWithProperty(int i) {
			return GetRuleContext<ObjectWithPropertyContext>(i);
		}
		public InitProcessContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_initProcess; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.EnterInitProcess(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.ExitInitProcess(this);
		}
	}

	[RuleVersion(0)]
	public InitProcessContext initProcess() {
		InitProcessContext _localctx = new InitProcessContext(Context, State);
		EnterRule(_localctx, 2, RULE_initProcess);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 21;
			Match(INIT);
			State = 23;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 22;
				objectWithProperty();
				}
				}
				State = 25;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==WORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ObjectWithPropertyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WORD() { return GetToken(ProcessParser.WORD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROPERTIES() { return GetToken(ProcessParser.PROPERTIES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ObjectPropertiesContext objectProperties() {
			return GetRuleContext<ObjectPropertiesContext>(0);
		}
		public ObjectWithPropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_objectWithProperty; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.EnterObjectWithProperty(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.ExitObjectWithProperty(this);
		}
	}

	[RuleVersion(0)]
	public ObjectWithPropertyContext objectWithProperty() {
		ObjectWithPropertyContext _localctx = new ObjectWithPropertyContext(Context, State);
		EnterRule(_localctx, 4, RULE_objectWithProperty);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 27;
			Match(WORD);
			State = 28;
			Match(PROPERTIES);
			State = 29;
			objectProperties();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ObjectPropertiesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WORD() { return GetTokens(ProcessParser.WORD); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WORD(int i) {
			return GetToken(ProcessParser.WORD, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyContext[] property() {
			return GetRuleContexts<PropertyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyContext property(int i) {
			return GetRuleContext<PropertyContext>(i);
		}
		public ObjectPropertiesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_objectProperties; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.EnterObjectProperties(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.ExitObjectProperties(this);
		}
	}

	[RuleVersion(0)]
	public ObjectPropertiesContext objectProperties() {
		ObjectPropertiesContext _localctx = new ObjectPropertiesContext(Context, State);
		EnterRule(_localctx, 6, RULE_objectProperties);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 31;
					Match(WORD);
					State = 32;
					property();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 35;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INCLUDE() { return GetToken(ProcessParser.INCLUDE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ChainOfCommandsContext chainOfCommands() {
			return GetRuleContext<ChainOfCommandsContext>(0);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_property; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.EnterProperty(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.ExitProperty(this);
		}
	}

	[RuleVersion(0)]
	public PropertyContext property() {
		PropertyContext _localctx = new PropertyContext(Context, State);
		EnterRule(_localctx, 8, RULE_property);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37;
			Match(INCLUDE);
			State = 38;
			chainOfCommands();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChainOfCommandsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SimplecommandContext[] simplecommand() {
			return GetRuleContexts<SimplecommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SimplecommandContext simplecommand(int i) {
			return GetRuleContext<SimplecommandContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditioncommandContext[] conditioncommand() {
			return GetRuleContexts<ConditioncommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditioncommandContext conditioncommand(int i) {
			return GetRuleContext<ConditioncommandContext>(i);
		}
		public ChainOfCommandsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chainOfCommands; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.EnterChainOfCommands(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.ExitChainOfCommands(this);
		}
	}

	[RuleVersion(0)]
	public ChainOfCommandsContext chainOfCommands() {
		ChainOfCommandsContext _localctx = new ChainOfCommandsContext(Context, State);
		EnterRule(_localctx, 10, RULE_chainOfCommands);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 42;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case COMMAND:
					{
					State = 40;
					simplecommand();
					}
					break;
				case CONDITIONCOMMAND:
					{
					State = 41;
					conditioncommand();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 44;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==COMMAND || _la==CONDITIONCOMMAND );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimplecommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMAND() { return GetToken(ProcessParser.COMMAND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GAMECOMMANDS() { return GetToken(ProcessParser.GAMECOMMANDS, 0); }
		public SimplecommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simplecommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.EnterSimplecommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.ExitSimplecommand(this);
		}
	}

	[RuleVersion(0)]
	public SimplecommandContext simplecommand() {
		SimplecommandContext _localctx = new SimplecommandContext(Context, State);
		EnterRule(_localctx, 12, RULE_simplecommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46;
			Match(COMMAND);
			State = 47;
			Match(GAMECOMMANDS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConditioncommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONDITIONCOMMAND() { return GetToken(ProcessParser.CONDITIONCOMMAND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(ProcessParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode THEN() { return GetToken(ProcessParser.THEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SimplecommandContext[] simplecommand() {
			return GetRuleContexts<SimplecommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SimplecommandContext simplecommand(int i) {
			return GetRuleContext<SimplecommandContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditioncommandContext[] conditioncommand() {
			return GetRuleContexts<ConditioncommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditioncommandContext conditioncommand(int i) {
			return GetRuleContext<ConditioncommandContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELSE() { return GetToken(ProcessParser.ELSE, 0); }
		public ConditioncommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conditioncommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.EnterConditioncommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProcessListener typedListener = listener as IProcessListener;
			if (typedListener != null) typedListener.ExitConditioncommand(this);
		}
	}

	[RuleVersion(0)]
	public ConditioncommandContext conditioncommand() {
		ConditioncommandContext _localctx = new ConditioncommandContext(Context, State);
		EnterRule(_localctx, 14, RULE_conditioncommand);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			Match(CONDITIONCOMMAND);
			State = 50;
			Match(IF);
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 53;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case COMMAND:
					{
					State = 51;
					simplecommand();
					}
					break;
				case CONDITIONCOMMAND:
					{
					State = 52;
					conditioncommand();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==COMMAND || _la==CONDITIONCOMMAND );
			State = 57;
			Match(THEN);
			State = 60;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					State = 60;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case COMMAND:
						{
						State = 58;
						simplecommand();
						}
						break;
					case CONDITIONCOMMAND:
						{
						State = 59;
						conditioncommand();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 62;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 71;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				{
				State = 64;
				Match(ELSE);
				State = 67;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						State = 67;
						ErrorHandler.Sync(this);
						switch (TokenStream.LA(1)) {
						case COMMAND:
							{
							State = 65;
							simplecommand();
							}
							break;
						case CONDITIONCOMMAND:
							{
							State = 66;
							conditioncommand();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 69;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
